Wrote some more

--- a/figures/barplot-preorder2.tex
+++ b/figures/barplot-preorder2.tex
@@ -3,9 +3,9 @@
 
 \begin{document}
 \begin{tikzcd}
-	&&& D \\
-	& {B_1} && \ldots && {B_n} \\
-	{S_1} & {S_2} & {S_3} & \ldots & {S_{k - 2}} & {S_{k - 1}} & {S_{k}}
+	&&& D_D \\
+	& {D_{B_1}} && \ldots && {D_{B_n}} \\
+	{D_{S_1}} & {D_{S_2}} & {D_{S_3}} & \ldots & {D_{S_{k - 2}}} & {D_{S_{k - 1}}} & {D_{S_{k}}}
 	\arrow["\cup", from=2-2, to=1-4]
 	\arrow["\cup"', from=2-6, to=1-4]
 	\arrow["\cup", from=3-1, to=2-2]
