--- a/figures/barplot-preorder3.tex
+++ b/figures/barplot-preorder3.tex
@@ -3,11 +3,11 @@
 
 \begin{document}
 \begin{tikzcd}
-	&& {B_1} \\
+	&& {D_{B_1}} \\
 	\\
-	{S_1} && {S_2} && {S_3}
-	\arrow["{- \cup S_2 \cup S_3}", from=3-1, to=1-3]
-	\arrow["{- \cup S_1 \cup S_3}"'{pos=0.2}, from=3-3, to=1-3]
-	\arrow["{- \cup S_1 \cup S_3}"', from=3-5, to=1-3]
+	{D_{S_1}} && {D_{S_2}} && {D_{S_3}}
+	\arrow["{- \cup D_{S_2} \cup D_{S_3}}", from=3-1, to=1-3]
+	\arrow["{- \cup D_{S_1} \cup D_{S_3}}"'{pos=0.2}, from=3-3, to=1-3]
+	\arrow["{- \cup D_{S_1} \cup D_{S_3}}"', from=3-5, to=1-3]
 \end{tikzcd}
 \end{document}
