--- a/index.Rmd
+++ b/index.Rmd
@@ -46,7 +46,7 @@ knitr::knit_engines$set(ts = function(options) {
     ts_conn <- file(ts_path)
     writeLines(code, ts_conn)
   
-    out <- system2("/home/adam/.bun/bin/bun", c("run", ts_path), stdout = TRUE)
+    out <- system2("~/.bun/bin/bun", c("run", ts_path), stdout = TRUE)
     close(ts_conn)
   }
   
