--- a/problems.Rmd
+++ b/problems.Rmd
@@ -415,7 +415,7 @@ The grammar-based model offers many advantages, including simplicity and express
 
 However, despite its advantages, the grammar-based model has one fundamental flaw: graphics and statistics are not truly independent [see also @wu2024]. Instead, the visual representation of data must be congruent with its mathematical properties. This constraint, while present even in static visualizations, becomes especially critical in interactive contexts. Let's illustrate this point with an example of real-world data.
 
-#### Stacking: Limits of independence {#stacking-not-graphical}
+#### Motivating example: Limits of independence {#stacking-not-graphical}
 
 For this example, I will use famous data set from a study on the effect of smoking on child lung capacity [@tager1979; @kahn2005]. In the study, the researchers measured children's forced expiratory volume (FEV), and recorded it alongside age, height, sex, and smoking status.
 
@@ -629,33 +629,6 @@ Here, $A$, $B$, and $C$ are three objects in category $\mathcal{C}$ and $F(A)$, 
 
 The second property of functors states that all of the above paths must lead to the same object $F(C)$ (if $F$ is a functor).
 
-```{r}
-#| results: "hold"
-x <- 1:10
-y <- 11:20
-z <- 21:30
-
-sum(c(c(x, y), z))      # F(f;g)
-sum(c(sum(c(x, y)), z)) # F(f);F(g)
-
-mean(c(c(x, y), z))       # F(f;g)
-mean(c(mean(c(x, y)), z)) # F(f);F(g)
-```
-
-```{r}
-#| results: "hold"
-is_functorial <- function(fn, x, y, z) {
-  fn(c(c(x, y), z)) == fn(c(fn(c(x, y)), z))
-}
-
-is_functorial(sum, x, y, z)
-is_functorial(max, x, y, z)
-is_functorial(prod, x, y, z)
-is_functorial(function(x) sqrt(sum(x^2)), x, y, z) # Euclidean distance
-is_functorial(mean, x, y, z)
-is_functorial(sd, x, y, z)
-```
-
 #### Aggregation: A functor from the preorder of data subsets to the preorder of summary statistics {#aggregation-functor}
 
 As we have established before, when visualizing data, we may start with a preorder of data subsets ordered by sibling subset union, as in Figure \@ref(fig:barplot-preorder2) (reproduced below for reminder). We would like to translate these data subsets into summary statistics, in a way that preserves the inherent structure in the data subset preorder. As we will see, the way to do this is via a functor.
@@ -672,26 +645,26 @@ What should be the order relation between the summaries in $S$? In $(D, \cup)$, 
 
 ```{r}
 #| echo: false
-#| fig-cap: "A diagram of barplot/spineplot summary statistic preorder, ordered by the combine operator $\\otimes$." 
+#| fig-cap: "A diagram of barplot/spineplot summary statistic preorder, ordered by the combination operator $\\otimes$." 
 knitr::include_graphics("./figures/barplot-preorder4.png") 
 ```
 
-As before, each $\otimes$ in the diagram above corresponds to the operation of combining a summary with the other sibling summaries, such that, for example, the label for the arrow $S_{S_1} \to S_{B_1}$ should be $- \otimes S_{S_1} \otimes S_{S_2}$.
+As before, each $\otimes$ in the diagram above corresponds to the operation of combining a summary with the other sibling summaries, such that, for example, the label for the arrow $S_{S_1} \to S_{B_1}$ should be $- \otimes S_{S_1} \otimes S_{S_2}$. In words, "a segment subset combines into a bar subset".
 
 Now comes the key point. Suppose that we have some summary operation $F: D \to S$ which maps data subsets to summaries. To preserve the structure of $(D, \cup)$, the operation should be functorial, such that, when joining some subset with two (disjoint) subsets $D_{i}$ and $D_{j}$ and summarizing:
 
 $$F(- \cup D_{i} \then - \cup D_{j}) = F(- \cup D_i) \then F(- \cup D_j)$$
 
-The expression above looks somewhat hairy, however, it can be simplified by nothing that:
+The expression above looks somewhat awkward, however, it can be simplified by nothing that:
 
-- $F(- \cup D_i ) = - \otimes F(D_i)$ (by definition of our functor: lifting a union operation to the space of summaries amounts to combining summaries)
-- Since $\cup$ and $\otimes$ are binary operators, we can omit the composition operator $\then$
+- $F(- \cup D_i ) = - \otimes F(D_i)$. This follows from the definition of our functor: the union operator is mapped to combining summaries in the summary category.
+- We can omit the composition operator $\then$. This is due to the fact that $\cup$ and $\otimes$ are binary operators which are also associative (by definition of composition in categories). As an example, if $f(x) = - \otimes 2 = x + 2$, then we can write $[f \then f](x) = f(f(x)) = ((x + 2) + 2) = x + 2 + 2$)
 
-Leading to:
+This leads to the following simplification:
 
 $$F(- \cup D_i \cup D_j) = - \otimes F(D_i) \otimes F(D_j)$$
 
-Without loss of generality, by choosing the empty set $\varnothing$ as the starting subset ($-$), the equation reduces to:
+Finally, without loss of generality, we can choose the empty set $\varnothing$ as the starting subset ($-$), and then the equation reduces to:
 
 \begin{equation}
 
@@ -700,9 +673,7 @@ F(D_i \cup D_j) = F(D_i) \otimes F(D_j)
 
 \end{equation}
 
-
-
-In other words, *it should not matter whether we first take the union of the underlying data and then summarize the resulting superset, or first summarize the subsets and then combine them via the operation $\otimes$*.
+In other words, *it should not matter whether we first take the union of the underlying data and then summarize the resulting superset, or first summarize the subsets and then combine them via the operation $\otimes$ (the summary should distribute across set union)*.
 
 Finally, we should note that, to be fully functorial, the operation should also preserve identities:
 
@@ -725,85 +696,98 @@ Second, as per Equation \@ref(eq:summary-functor-composition), the summary shoul
 
 $$F(D_i \cup D_j) = F(D_i) \otimes F(D_j)$$
 
-This distributive property should hold over *all* disjoint subsets of the data as these correspond to all possible arrows we can draw in the set union diagram of the data subset preorder. The smallest (non-empty) disjoint subsets are individual data points $d_i \in D$. Thus, the summary operation needs to distribute over data points:
+This distributive property should hold over *all* disjoint subsets of the data as these correspond to all possible arrows we can draw in the set union diagram of the data subset preorder. Further, we can imagine any set $D_i$ to be the union of the smallest possible (non-empty) disjoint subsets: individual data points (rows) $d_j \in D_i$. Thus, the summary operation should distribute over data points:
 
-$$F(d_1 \cup d_2 \cup \ldots \cup d_k) = F(d_1) \otimes F(d_2) \otimes \ldots \otimes F(d_k)$$
+$$F(d_1 \cup d_2 \cup \ldots \cup d_n) = F(d_1) \otimes F(d_2) \otimes \ldots \otimes F(d_n)$$
 
-Thus, in some way, $F$ *really is* the combination operator $\otimes$. We can write:
+Thus, in a certain way, $F$ *really is* the binary combination operator $\otimes$. We can write:
 
-$$F(d_1 \cup d_2 \cup \ldots d_k) = d_1 \otimes d_2 \otimes \ldots d_k$$
+$$F(d_1 \cup d_2 \cup \ldots d_k) = d_1 \otimes d_2 \otimes \ldots d_n$$
 
-The second property, associativity, is a bit more interesting. It means that the order in which we take union of multiple sets does not matter. We can describe it via the following commutative diagram: 
+Just to drive the point home, we can also imagine going the other way around and combining the summaries of two data subsets $D_i$ and $D_j$. Then:
 
-```{r barplot-associativity}
-#| echo: false
-#| fig-cap: "Set union is associative. We can either first combine set $S_1$ with set $S_2$ and then with set $S_3$, or combine subset $S_1$ with with union of $S_2$ and $S_3$ directly, and get the same result."
-knitr::include_graphics("./figures/barplot-associativity.png") 
-```
+\begin{aligned}
 
-Here, like in any commutative diagram, two parallel paths indicate the same result. Starting at $S_1$, we can either take the *long path*, and combine $S_1$ with $S_2$, and then combine the result with $S_3$, or take the *short path*, and combine $S_1$ with the union $S_2 \cup S_3$ directly. The diagram in Figure \@ref(fig:barplot-associativity) merely tells us that, no matter which path we take, we always end up with the same result.
+F(D_i) \otimes F(D_j) &= (d_{i1} \otimes d_{i2} \otimes \ldots d_{in}) \otimes (d_{j1} \otimes d_{j1} \otimes \ldots d_{jk}) \\
+&= d_{i1} \otimes d_{i2} \otimes \ldots d_{in} \otimes d_{j1} \otimes d_{j1} \otimes \ldots d_{jk} \qquad \text{(by associativity)} \\
+&= F(D_i \cup D_j)
 
-We could imagine drawing these commutative diagrams for any possible sequence of subsets. For example, the following diagram shows all the ways three subsets can be sequentially combined to form their union: 
+\end{aligned}
 
-```{r barplot-associativity2}
-#| echo: false
-#| fig-cap: "All the ways three subsets can be combined into one superset. Arrow labels are omitted to prevent the diagram from becoming cluttered."
-knitr::include_graphics("./figures/barplot-associativity2.png") 
-```
-
-Further, we could actually draw all of these possible paths inside \@ref(fig:barplot-preorder2). However, as you can imagine, with so many arrows and nodes, the figure would quickly become very busy - in Figure \@ref(fig:barplot-associativity2), the number of paths grows as a factorial of the number of bottom nodes [@fong2019]. Nevertheless, this structure *is there*, implicitly: we know that we can combine the data subsets corresponding to bar segments in any order, and end up with a valid bar subset.
-
-Thus, when we go on to map our data from the space of data subsets into a space of statistics, we want to preserve this web of arrows. In the microcosm of three segment subsets combining into a bar subset, we want the following diagram to commute:
-
-```{r functor-diagram}
-#| echo: false
-#| fig-cap: "Commutative diagram of the functor from the space of the data subsets to the space of summary statistics. The top triangle represents the associativity of taking the union of data subsets, F represents the operation of summarizing a set via a summary statistic, and otimes represents the operation of combining two summary statistics together."
-knitr::include_graphics("./figures/barplot-functor.png")
-```
-
-This is precisely the diagram of a functor from Figure \@ref(fig:functor). The functor $F$ here represents the action of taking a subset of data and summarizing it (more on that later). Most importantly, the commutative diagram tells us the following:
-
-> The summary operation should preserve set union, meaning that we can either first combine the data subsets via union and then summarize the resulting superset, or first summarize the subsets and then combine the summaries, *and the result will be the same.*
-
-This is the most important point in this section, and one of the most important points in the whole thesis. The definition of a functor tells us which summary statistics can meaningfully preserve the part-whole hierarchical partitioning of our data, and this in turn tells us whether they will be "stackable" and behave well under linked selection. 
+Again, this shows that combining summaries leads to a valid summary of the underlying subset union, which is precisely the desired property we set out to find.
 
 #### Stackable summaries: Monoids
 
-So far, I have argued that the summary statistics in our plots should preserve the properties of set union, and formalized this idea via the concept of a structure-preserving map or functor. Now, we can apply this definition to concretely identify the set of valid summary statistics that possess these structure-preserving properties. That is, we can describe the statistics which "behave like set union".
+I have argued that, for plots to be well-behaved under certain kinds of interactions such as linked selection, the summary statistics we display should "behave like set union". Specifically, they should be a functor from the preorder of data subsets. This has lead to two key insights: the summary statistic should be based on some binary associative operation $\otimes$, and the summarized values should be equipped with some "neutral" value that is the result of summarizing an empty set. It turns out there is a well-known algebraic structure with these exact properties: monoids. 
 
-The two important properties of set union we wish to preserve are:
-
-- Unitality: $F(A \cup \varnothing) = F(A) \otimes F(\varnothing) = F(A)$
-- Associativity $F(A \cup (B \cup C)) = F((A \cup B) \cup C) = F(A) \otimes F(B) \otimes F(C)$
-
-It turns out there is an algebraic structure with these exact properties. Specifically, a monoid $(M, e, \otimes)$ is a set $M$ equipped with a binary operation $\otimes$ and a special neutral element $e$, such that the operation is:
+Formally, a monoid $(M, e, \otimes)$ is a set $M$ equipped with a binary operation $\otimes$ and a special neutral element $e$, such that the operation is:
 
 - Unital: $m \otimes e = e \otimes m = m$ for all $m \in M$
 - Associative: $(m_1 \otimes m_2) \otimes m_3 = m_1 \otimes (m_2 \otimes m_3) = m_1 \otimes m_2 \otimes m_3$
 
-If we define the functor $F$ as summarizing a data subset via a monoidal summary statistic, then this will behave exactly as we want. Specifically, define the functor $F$ as summarizing or "folding" some data subset by repeatedly applying the monoidal operation $\otimes$. For example:
+These are exactly the properties we were looking for. In other words, if the summary statistic is a monoid, it behaves like set union. The summary functor $F$ then just acts the following way:
 
-$F(A) = F(\{a_1 , a_2, a_3 , \ldots \}) = a_1 \otimes a_2 \otimes a_3 \otimes \ldots$
+- For the empty set, it just returns the neutral value: $F(\varnothing) = e$
+- For a non-empty set $D_i$, it "folds" the set by repeatedly applying the combination operator: $F(D_i) = F(\{d_{i1} , d_{i2}, \ldots, d_{in} \}) = d_{i1} \otimes d_{i2} \otimes \ldots \otimes d_{in}$
 
-(we could have written this as $F(A) = (((a_1 \otimes a_2) \otimes a_3) \otimes \ldots)$, however, thanks to associativity, brackets do not matter)
+Monoids are well-known in category theory and functional programming. When $M$ is the set of real numbers, a typical example is the summation $(\mathbb{R}, 0, +)$ (which we are familiar with as the "default" summary statistic in typical barplots). Other examples include the product $(\mathbb{R}, 1, \cdot)$ and maximum operators $(\mathbb{R}, \max, -\infty)$. However, the set $M$ does not have to be only numbers. For example, the set of strings with the concatenation operator $\text{++}$ and the empty string $\text{""}$ as the neutral element forms a valid monoid:
 
-Then:
+$$\text{"hello" ++ ""} = \text{"" ++ "hello" } = \text{"hello"} $$
+$$\text{"quick " ++ (" brown" ++ " fox")}  \text{} = \text{("quick " ++ " brown ") ++ " fox"} = \text{"quick brown fox"}$$
 
-\begin{aligned}
+While most summary statistics we care about in data visualization are numeric, this is still an interesting fact to ponder.
 
-F(A) \otimes F(B) &= (a_1 \otimes a_2 \otimes a_3 \otimes \ldots) \otimes (b_1 \otimes b_2 \otimes b_3 \otimes \ldots) \\
-&= a_1 \otimes a_2 \otimes a_3 \otimes \ldots \otimes b_1 \otimes b_2 \otimes b_3 \otimes \ldots \\
-&= F(A \cup B)
+Further, statements about statistics being monoids translate fairly well to code. Specifically, if we take set union to be vector/array concatenation (the `c()` function in R), and provided we have some representative data vectors, we can test the properties of an arbitrary summary function. For example, here's how we can test whether `sum` and `mean` are associative:
 
-\end{aligned}
+```{r}
+#| results: "hold"
+x <- 1:10
+y <- 11:20
+z <- 21:30
 
-Also, if we define the summary of an empty set as $F(\varnothing) = e$, the monoidal unit, then:
+sum(c(c(x, y), z))      # F(f;g)
+sum(c(sum(c(x, y)), z)) # F(f);F(g)
 
-$$F(A \cup \varnothing) = F(A) \otimes F(\varnothing) = F(A) \otimes e = F(A) $$
+mean(c(c(x, y), z))       # F(f;g)
+mean(c(mean(c(x, y)), z)) # F(f);F(g)
+```
 
-A typical example of a monoid is the summation of real numbers $(\mathbb{R}, 0, +)$ (which we are familiar with as the "default" summary statistic in a typical barplot). Another example is the product of real numbers: $(\mathbb{R}, 1, \cdot)$, or maximum of real numbers $(\mathbb{R}, \max, -\infty)$.
+We could even create a wrapper function to test whether a given function with a specific neutral element forms a monoid:
 
+```{r}
+#| results: "hold"
 
+is_unital <- function(fn, e, x) {
+  (fn(c(e, x)) == fn(c(x, e))) && (fn(c(e, x)) == fn(x))
+}
+
+is_associative <- function(fn, x, y, z) {
+  fn(c(c(x, y), z)) == fn(c(fn(c(x, y)), z))
+}
+
+is_monoid <- function(fn, e, x, y, z) {
+  is_unital(fn, e, x) && is_associative(fn, x, y, z)
+}
+
+string_concat <- function(x) paste0(x, collapse = "")
+vector_length <- function(x) sqrt(sum(x^2)) # Alternatively, euclidean distance
+
+is_monoid(sum, 0, x, y, z)
+is_monoid(max, -Inf, x, y, z)
+is_monoid(prod, 1, x, y, z)
+is_monoid(string_concat, "", "a", "b", "c")
+is_monoid(vector_length, 0, x, y, z)
+is_monoid(mean, 0, x, y, z)
+is_monoid(median, 0, x, y, z)
+is_monoid(sd, 0, x, y, z)
+
+# Technically, all of the functions should be binary and take 2 scalar arguments,
+# i.e. string_concat and vector_length should be defined as function(x, y),
+# however, I've defined them here as unary vector functions to be consistent with
+# mean, median, and sd.
+```
+
+Of course, technically, the properties of associativity and unitality should hold for *all* possible values, thus testing that a summary function passes the `is_monoid` test for any three specific data vectors is not sufficient to call it a monoid. However, a single counter-example does disprove the summary function being monoidal, as is the case, for example, with `mean`, `median`, and `sd` above.
 
 #### Transforming summaries
 
